--- a/less/task14-3.less
+++ b/less/task14-3.less
@@ -27,34 +27,34 @@ html{
 }
 
 ///header样式
-   //标题栏按钮样式
- .contact {
-   .flexb;
-   color: @main_bgc;
-   .font-s14;
-   width: @main-width;
-   margin: 0 auto;
-   a {
-     width: 0.5rem;
-     height: 0.2rem;
-     .dib;
-     padding-left: 0.1rem;
-     line-height: 0.2rem;
-     .tc;
-     color: @main_bgc;
-     .text-n;
-     border-right: 1px solid lightgrey;
-     padding-right: 0.1rem;
-     :hover{
-       color:@link_hover;
-     }
-   }
-   div {
-     .dib;
-     height: 0.35rem;
-     line-height: 0.35rem;
-   }
- }
+//标题栏按钮样式
+.contact {
+  .flexb;
+  color: @main_bgc;
+  .font-s14;
+  width: @main-width;
+  margin: 0 auto;
+  a {
+    width: 0.5rem;
+    height: 0.2rem;
+    .dib;
+    padding-left: 0.1rem;
+    line-height: 0.2rem;
+    .tc;
+    color: @main_bgc;
+    .text-n;
+    border-right: 1px solid lightgrey;
+    padding-right: 0.1rem;
+    :hover{
+      color:@link_hover;
+    }
+  }
+  div {
+    .dib;
+    height: 0.35rem;
+    line-height: 0.35rem;
+  }
+}
 @media screen and (max-width: 1080px) {
   .contact {
     display: none;
@@ -152,100 +152,102 @@ html{
 .clearfix{
   .clearfix;
 }
-//图片样式
-.faster{
-  width:100%;
-  .bgcolor(#f1a750);
-  margin-top:1rem;
-  .resp{
-    display: block;
-    max-width: 100%;
-    height: auto;
-    width:1200px;
-    margin:0 auto;
-      }
-}
 
-//两栏布局
-main{
-  width:1200px;
-  margin:0 auto;
-  .frontpage{
-    margin-top:0.37rem;
-    .font-s(0.16rem);
-    span{
-      color:@main_bgc;
-    }
-  }
-  .navbar{
-    width:3.05rem;
-    margin:0.26rem 0;
-    .bxshadow;
-    .fl;
-   div{
-     .tc;
-     .font-s(0.16rem);
-     .txt-ver(0.63rem);
-     border-bottom:1px solid lightgrey;
-   }
-    ul{
-      color:@main_bgc;
-      margin-left:20%;
-      .list-sn;
-      margin-bottom:0.5rem;
-      li{
-        margin-top:0.3rem;
-        .bg-nc("../img/round7.png",left,center);
-        padding-left:10%;
-        &:hover{
-          .bg-nc("../img/round8.png",left,center);
-          color:@link_hover;
-        }
-      }
-    }
-  }
-  .maincontent{
-    margin-top:0.26rem;
-    margin-bottom:2.3rem;
-    width:71.5%;
-    .bxshadow;
-    .fr;
-     color:@main_fontcolor;
-    .font-s(0.14rem);
-    .title{
-      .flexb;
-      align-items: center;
-      padding: 0 0.5rem;
-    }
-    .tudou{
-      padding: 0.2rem 0.5rem;
-      margin-bottom:0.5rem;
-      p{
-        margin-top: 0.2rem;
-        text-indent: 2em;
-      }
-    }
-  }
-}
-@media screen and (max-width: 1080px) {
-main{
+
+//三个页面
+main {
+  width: 1200px;
+  margin: 0 auto;
+  margin-top: 1.3rem;
+  .frontpage {
     width: 100%;
-  margin:0 auto;
-    .navbar {
-      float: none;
-      width: 70%;
-      .db;
-      margin: 0.3rem auto;
+    border-bottom: 1px solid #d0d6d9;
+    .txt-ver(0.52rem);
+    .font-s(0.15rem);
+    span {
+      color: @main_bgc;
     }
-    .maincontent {
-      .title{
-       flex-direction: column;
+  }
+  .direction {
+    .w100;
+    border-bottom: 1px solid #edf1f2;
+    .font-s(0.14rem);
+    height: 0.4rem;
+    margin-top: 0.2rem;
+    span {
+      color: #d0d6d9;
+    }
+    a {
+      .dib;
+      height: 50%;
+
+      margin-left: 0.3rem;
+      color: black;
+      &:hover {
+        .bgcolor(@main_bgc);
+        color: white;
+        .text-n();
+      }
+    }
+  }
+  .headline {
+    width: 100%;
+    .txt-ver(0.74rem);
+    .font-s(0.16rem);
+    .font-wb;
+    border-bottom: 1px solid #edf1f2;
+  }
+  .carrierall {
+    .flexb;
+    .kong{
+      width:30%;
+    }
+    flex-wrap: wrap;
+    width: 100%;
+    .carrier {
+      width: 30%;
+      margin-top: 0.1rem;
+      .bxshadow;
+      .door {
+        padding: 0.1rem 0.1rem;
+        color: @main_fontcolor;
+      }
+      .money {
+        .flex;
+        justify-content: center;
+        align-items: center;
+        color: @main_fontcolor;
+      }
+      .door1 {
+        padding: 0.1rem 0.1rem;
+        .flexb;
+      }
+      table {
+        border: 1px solid #edf1f2;
 
       }
-      float: none;
-      .db;
-      width:70%;
-      margin: 0 auto;
+      .red {
+        color: #f2483d;
+      }
+      .lastline {
+        color: @main_fontcolor;
+        .font-s(0.11rem);
+        .font-wn;
+      }
+    }
+  }
+}
+@media screen and (max-width: 1080px){
+  main{
+    .w100;
+    .carrierall{
+      .w100;
+      .flex;
+      flex-direction: column;
+      .carrier{
+        width:80%;
+        margin:0 auto;
+      }
     }
   }
 }
@@ -281,13 +283,13 @@ footer{
   }
   width:100%;
   .bgcolor(@main_bgc);
-   .qixia{
-     div{
-       span{
-         padding-right:0.3rem;
-       }
-     }
-   }
+  .qixia{
+    div{
+      span{
+        padding-right:0.3rem;
+      }
+    }
+  }
 }
 @media screen and (max-width: 1080px){
   footer {
@@ -317,3 +319,5 @@ footer{
   border-top:1px solid #32c086;
   padding-top:0.1rem;
 }
+
+
