--- a/css/task10-1.css
+++ b/css/task10-1.css
@@ -2371,6 +2371,14 @@ html {
     background-color: #1d7ad9;
     color: white;
   }
+  .login .phone {
+    display: none;
+  }
+  .login .bth {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+  }
 }
 .login a {
   color: white;
@@ -2438,74 +2446,67 @@ html {
   color: white;
 }
 /*进度条*/
-.self-order {
-  padding-left: 50%;
-  margin-right: 18.6%;
-  margin-top: 132px;
-}
-@media screen and (max-width: 1080px) {
-  .self-order {
-    width: 300px;
-    margin: 0 auto;
-    margin-top: 3rem;
-    padding-left: 0;
-  }
-}
-.progress1 {
-  height: 0.1rem;
-  background-color: #cccccc;
-}
-.bar1 {
-  background-color: #ff7f02;
-}
-@media screen and (max-width: 1080px) {
-  .progress1 {
-    margin-top: 0.3rem;
-    height: 0.1rem;
-    background-color: #cccccc;
-  }
-}
-.progress2 {
+nav {
   display: flex;
-  justify-content: space-around;
-  margin-top: -0.34rem;
+  width: 62.5%;
+  margin: 1.2rem auto 0 auto;
+  justify-content: flex-end;
+  text-align: center;
+}
+nav .process {
+  width: 13%;
+  height: 0.05rem;
+  color: #cccccc;
+  background-color: #cccccc;
+}
+nav .process .circle {
+  width: 25px;
+  height: 25px;
+  color: white;
+  background-color: #cccccc;
+  border-radius: 50%;
+  margin: -0.1rem auto 0.06rem;
+}
+nav .orange {
+  background-color: #ff7f02;
+  color: #ff7f02;
+}
+nav .orange .circle {
+  background-color: #ff7f02;
 }
 @media screen and (max-width: 1080px) {
-  .progress2 {
-    display: flex;
-    justify-content: space-around;
-    margin-top: -0.34rem;
+  nav {
+    width: 100%;
+    margin: 3rem auto 0.5rem auto;
+    justify-content: space-between;
+  }
+  nav .process {
+    width: 25%;
   }
 }
-.pg1 {
-  text-align: center;
-  color: #ff7f02;
-  font-weight: bold;
+.btna {
+  display: flex;
+  width: 62.5%;
+  margin: -0.05rem auto 0 auto;
+  opacity: 0;
+  justify-content: flex-end;
 }
-.pg1 span {
-  display: block;
-  width: 20px;
-  height: 20px;
-  border-radius: 10px;
-  background-color: #ff7f02;
-  color: white;
-  margin-left: 0.2rem;
-  margin-bottom: 0.1rem;
+.btna input {
+  width: 13%;
+  height: 0.5rem;
 }
-.pg2 {
-  text-align: center;
-  color: #cccccc;
-  font-weight: bold;
-}
-.pg2 span {
-  display: block;
-  width: 20px;
-  height: 20px;
-  border-radius: 10px;
-  background-color: #cccccc;
-  color: white;
-  margin-left: 0.2rem;
-  margin-bottom: 0.1rem;
+@media screen and (max-width: 1080px) {
+  .btna {
+    display: flex;
+    width: 100%;
+    opacity: 0;
+    margin: -0.7rem auto 0 auto;
+    justify-content: flex-end;
+  }
+  .btna input {
+    width: 25%;
+    height: 0.5rem;
+  }
 }
 main {
   width: 62.5%;
@@ -2537,6 +2538,9 @@ h5 {
   font-size: 0.14rem;
   background-color: #ffffff;
   border: 1px solid lightgrey;
+}
+.boxtype .tg1 .details span {
+  padding-left: 0.2rem;
 }
 .boxtype .tg1 .dropdown-menu {
   position: absolute;
@@ -2617,6 +2621,9 @@ h5 {
   background-color: #ffffff;
   border: 1px solid lightgrey;
 }
+.boxtype3 .tg1 .details span {
+  padding-left: 0.2rem;
+}
 .boxtype3 .tg1 .dropdown-menu {
   position: absolute;
   margin-top: -0.2rem;
@@ -2665,6 +2672,9 @@ h5 {
 .boxtype3 .tg1 {
   height: 1.16rem;
   line-height: 1.16rem;
+}
+.boxtype3 .tg1 .details span {
+  padding-left: 0.2rem;
 }
 .boxtype3 .tg1 .dropdown-menu {
   position: absolute;
@@ -2719,6 +2729,9 @@ h5 {
   background-color: #ffffff;
   border: 1px solid lightgrey;
 }
+.boxtype4 .tg1 .details span {
+  padding-left: 0.2rem;
+}
 .boxtype4 .tg1 .dropdown-menu {
   position: absolute;
   margin-top: -0.2rem;
@@ -2767,7 +2780,7 @@ h5 {
 }
 @media screen and (max-width: 1080px) {
   .boxtype4 {
-    height: 10rem;
+    height: 12rem;
   }
   .boxtype4 .boxtype2 {
     height: 6rem;
