--- a/css/task10-1.css
+++ b/css/task10-1.css
@@ -2399,9 +2399,11 @@ html {
 }
 /*title*/
 .title {
-  padding-right: 18.7%;
   background-color: #f9f9f9;
+  width:100%;
   height: 1rem;
+  text-align: right;
+  padding-right:18.75%;
   padding-top: 30px;
 }
 @media screen and (max-width: 1080px) {
@@ -2409,9 +2411,11 @@ html {
     display: flex;
     flex-direction: column;
     height: 2rem;
-    width: 200px;
-    align-items: flex-start;
+    align-items: center;
     justify-content: space-between;
+    padding:0.2rem 0 0.2rem 0;
+    width:100%;
+    .tc;
   }
   .bt2 {
     margin-left: 0.1rem;
@@ -2449,7 +2453,7 @@ html {
 nav {
   display: flex;
   width: 62.5%;
-  margin: 1.2rem auto 0 auto;
+  margin: 0.48rem auto 0 auto;
   justify-content: flex-end;
   text-align: center;
 }
@@ -2477,7 +2481,7 @@ nav .orange .circle {
 @media screen and (max-width: 1080px) {
   nav {
     width: 100%;
-    margin: 3rem auto 0.5rem auto;
+    margin: 1rem auto 0.5rem auto;
     justify-content: space-between;
   }
   nav .process {
@@ -2566,7 +2570,8 @@ h5 {
   line-height: 1;
 }
 .boxtype input[type="radio"]:checked + label::before {
-  background-color: #1d7ad9;
+  background-color: white;
+  border:5px solid #1d7ad9;
   background-clip: content-box;
   padding: .2em;
 }
@@ -2648,7 +2653,8 @@ h5 {
   line-height: 1;
 }
 .boxtype3 input[type="radio"]:checked + label::before {
-  background-color: #1d7ad9;
+  background-color: white;
+  border:5px solid #1d7ad9;
   background-clip: content-box;
   padding: .2em;
 }
@@ -2756,7 +2762,8 @@ h5 {
   line-height: 1;
 }
 .boxtype4 input[type="radio"]:checked + label::before {
-  background-color: #1d7ad9;
+  background-color: white;
+  border:5px solid #1d7ad9;
   background-clip: content-box;
   padding: .2em;
 }
