--- a/css/task10-1.css
+++ b/css/task10-1.css
@@ -2805,12 +2805,12 @@ footer {
   left: 0;
   right: 0;
   bottom: 0;
-  height: 2rem;
+  height:3rem;
   color: #999999;
   font-size: 0.17rem;
-  padding-left: 18.6%;
-  padding-right: 18.6%;
-  width: 100%;
+    width: 100%;
+  padding-left: 18.7%;
+  padding-right: 18.7%;
 }
 footer a {
   font-size: 0.15rem;
@@ -2822,11 +2822,17 @@ footer a {
   justify-content: space-between;
 }
 @media screen and (max-width: 1080px) {
+  footer{
+    height:4rem;
+    padding:0;
+  }
   .aboutus {
-    padding-top: 0.5rem;
+    padding: 0.5rem 0 0 0rem;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content:space-around;
+    height:4rem;
+    align-items: center;
   }
 }
 .left1 {
@@ -2834,6 +2840,14 @@ footer a {
   flex-direction: column;
   justify-content: space-between;
   font-size: 18px;
+}
+@media screen and (max-width: 1080px) {
+  .left1 {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+
 }
 .cc2 a {
   border-right: 2px solid white;
@@ -2876,7 +2890,7 @@ footer a {
     left: 0;
     right: 0;
     width: 100%;
-    margin-top: 2rem;
+    margin-top: 1rem;
   }
 }
 .right1 {
