--- a/css/task11.css
+++ b/css/task11.css
@@ -142,6 +142,7 @@ main .content .login1 {
   text-align: center;
   padding-left: 60px;
   height: 98px;
+  font-size: 36px;
 }
 .code a {
   float: right;
