--- a/css/task13-3.css
+++ b/css/task13-3.css
@@ -83,21 +83,25 @@ main {
   display: flex;
   justify-content: space-between;
 }
+.count .count1 .sec {
+  margin-left: 7px!important;
+}
 .down {
   background-color: #ffffff;
+  margin-bottom: 2rem;
 }
 .down ul {
   list-style: none;
   padding: 0;
-  margin-left: 11.6%;
-  margin-right: 11.6%;
   background-color: #ffffff;
 }
 .down ul li {
   color: #cbcbcb;
+  width: 100%;
+  border-bottom: 1px solid #dddddd;
 }
 .down ul li div {
-  margin: 0.3rem 0;
+  margin: 0.1rem 11.6%;
 }
 .emi {
   display: flex;
@@ -116,7 +120,7 @@ main {
   left: 0;
   right: 0;
   bottom: 0;
-  height: 1.6rem;
+  height: 1.3rem;
   color: white;
   background-color: rgba(41, 189, 224, 0.3);
   z-index: 999;
@@ -124,7 +128,7 @@ main {
 }
 .bt1 {
   width: 40%;
-  height: 70%;
+  height: 60%;
   background-color: #f66f6f;
   font-size: 0.2rem;
   color: white;
@@ -133,7 +137,7 @@ main {
 }
 .bt2 {
   width: 40%;
-  height: 70%;
+  height: 60%;
   background-color: #fbb435;
   font-size: 0.2rem;
   color: white;
