--- a/css/task-12-2.css
+++ b/css/task-12-2.css
@@ -184,35 +184,55 @@ li {
   padding-left: 0.25rem;
 }
 /*footer*/
-footer {
+.navbar-fixed-bottum {
   position: fixed;
   left: 0;
   bottom: 0;
-  right: 0;
-  font-size: 0.16rem;
-  text-align: center;
-  height: 1rem;
+  margin-bottom: 0;
+  border-width: 1px 0 0;
+  width: 100%;
   background-color: #f8fafb;
-  align-items: center;
-  display: flex;
-  justify-content: space-between;
-  border-top: 0.3px solid #e1e5e7;
 }
-footer .front {
+.footer_leftbutton {
+  position: fixed;
+  left: 25%;
+  height: 50px;
+  padding: 0;
+  border: 0;
+  transform: translate(-50%, 0);
   color: #5fc0cd;
-  float: left;
-  display: inline;
-  margin-left: 22.5%;
-  display: flex;
-  flex-direction: column;
+  background-color: #f8fafb;
 }
-footer .mine {
-  color: #a5a5a5;
-  float: right;
-  display: inline;
-  margin-right: 22.5%;
-  display: flex;
-  flex-direction: column;
+.footer_centerbutton {
+  position: fixed;
+  left: 50%;
+  height: 50px;
+  padding: 0;
+  border: 0;
+  transform: translate(-50%, 0);
+  background-color: #f8fafb;
+}
+.footer_rightbutton {
+  position: fixed;
+  left: 75%;
+  height: 50px;
+  padding: 0;
+  border: 0;
+  transform: translate(-50%, 0);
+  color: #cfcfcf;
+  background-color: #f8fafb;
+}
+.centerimg {
+  height: 100%;
+  width: 72px;
+}
+.leftimg {
+  height: 50%;
+  width: 50%;
+}
+.rightimg {
+  height: 50%;
+  width: 50%;
 }
 .scc {
   min-width: 1.2rem;
