--- a/less/task-12-2.less
+++ b/less/task-12-2.less
@@ -41,7 +41,7 @@ header{
   text-align: center;
   .font-s(0.16rem);
   height: 0.5rem;
-  .bg-m(#5fc0cd,"../img/iconheader.png",90%,center);
+  .bg-m(#5fc0cd,"../img/iconheader.png",96%,center);
   background-size:0.3rem 0.3rem;
   .bt1{
     .bgcolor(#55a8b3);
@@ -65,17 +65,35 @@ header{
   .font-s(0.16rem);
   .flex;
   .puman;
-  border-bottom:1px solid #adadad;
+  border-bottom:1px solid #e1e5e7;
   .bgcolor(white);
 }
 .dp-cell{
   flex:1;
-  .bg-nc("../img/dropdownicon.png",95%,center,no-repeat);
+  .bg-nc("../img/dropdownicon.png",89%,center,no-repeat);
   background-size:0.05rem 0.05rem;
-  border-right:1px solid #adadad;
+  border-right:1px solid #e1e5e7;
+}
+.dropdown-toggle{
+  .dib;
+  .flex;
+  align-items: center;
+    justify-content: flex-start;
+  height:0.5rem;
+  line-height: 0.5rem;
+  padding-left:13%;
+}
+@media screen and (max-width: 320px) {
+  .dropdown-toggle{
+    .fl;
+    margin-left:0;
+    text-align: left;
+  }
 }
 .dropdown-toggle{
   color:#adadad;
+  overflow: hidden;
+  text-overflow:ellipsis;
 }
 //content
 li{
@@ -88,11 +106,15 @@ li{
   .font-s(0.14rem);
   overflow: auto;
   .z-index(-2);
+  ul{
+    margin:0;
+  }
 }
 .textarea{
-  border-bottom: 1px solid #adadad;
-  padding:0.1rem 0.2rem;
+  border-bottom: 1px solid #e1e5e7;
+  padding:0.1rem 4%;
   overflow:hidden;
+  margin:0;
   text-overflow:ellipsis;
 }
 .date{
@@ -107,6 +129,7 @@ li{
   .space;
   .bg-nc("../img/green.png",right,center);
   overflow: hidden;
+
   text-overflow:ellipsis;
 }
 .time1{
@@ -132,50 +155,57 @@ li{
   padding-left:0.25rem;
 }
 /*footer*/
-footer{
-  .fix();
- .puman;
-  left:0;
-  bottom:0;
-  right:0;
-  text-align:center;
-  .font-s(0.16rem);
-  height: 0.5rem;
-  .bgcolor(#f8fafb);
+.navbar-fixed-bottum {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  margin-bottom: 0;
+  border-width: 1px 0 0;
+  width: 100%;
+  background-color: #f8fafb;
 }
-footer a{
-  text-align: center;
-  .text-n();
-}
-footer .back {
-  .rel();
-  top: .08rem;
-  padding-top: .32rem;
-  margin-right: 15%;
-  .bg-nc("../img/home.png");
-  background-size: .25rem .24rem;
+.footer_leftbutton {
+  position: fixed;
+  left: 25%;
+  height: 50px;
+  padding: 0;
+  border: 0;
+  transform: translate(-50%, 0);
   color: #5fc0cd;
+  background-color: #f8fafb;
 }
-footer .write {
-  .d-ib;
-  width: .6rem;
-  height: .6rem;
-  .rel();
-  .bg-nc("../img/椭圆4.png",50%,40%);
-  background-size: 0.4rem 0.4rem;
-  vertical-align: middle;
+.footer_centerbutton {
+  position: fixed;
+  left: 50%;
+  height: 50px;
+  padding: 0;
+  border: 0;
+  transform: translate(-50%, 0);
+  background-color: #f8fafb;
 }
-
-footer .mine {
-  .rel();
-  top: .08rem;
-  margin-left: 15%;
-  padding-top: .35rem;
-  .bg-nc("../img/mine.png");
-  background-size: .25rem .24rem;
-  color: #999;
-  .text-n();
+.footer_rightbutton {
+  position: fixed;
+  left: 75%;
+  height: 50px;
+  padding: 0;
+  border: 0;
+  transform: translate(-50%, 0);
+  color: #cfcfcf;
+  background-color: #f8fafb;
 }
-.scc{
-  min-width:1.2rem;
+.centerimg {
+  height: 100%;
+  width: 72px;
+}
+.leftimg {
+  height: 50%;
+  width: 50%;
+}
+.rightimg {
+  height: 50%;
+  width: 50%;
+}
+.scc {
+  min-width: 1.2rem;
+  width:100%;
 }
